# oppai-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
src/: beatmaps.rs  errors.rs  ffi.rs  lib.rs  modes.rs  mods.rs  tests.rs
tests/: test.c
