[package]
name = "oppai-rs"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"
bitflags = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
