[package]
name = "oppai-rs"
version = "0.2.4"
authors = ["Natsu Kagami <natsukagami@gmail.com>", "tsunyoku <tsunyoku@gmail.com>"]
edition = "2018"
build = "build.rs"

description = "Rust bindings to `oppai-ng`(https://github.com/Francesco149/oppai-ng) with a safe wrapper."
repository = "https://github.com/osuAkatsuki/oppai-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"
bitflags = "1"

[build-dependencies]
cc = "1"

[dev-dependencies]
lazy_static = "1.4.0"
